@@ -56,6 +56,7 @@ class Cursor {
         _ttl(ttl),
         _expires(TRI_microtime() + _ttl),
         _hasCount(hasCount),
+        _canUseExpire(false),
         _isDeleted(false),
         _isUsed(false) {}
 
@@ -71,6 +72,8 @@ class Cursor {
   inline double ttl() const { return _ttl; }
 
   inline double expires() const { return _expires; }
+  
+  inline bool canUseExpire() const { return _canUseExpire; }
 
   inline bool isUsed() const { return _isUsed; }
 
@@ -89,6 +92,10 @@ class Cursor {
   void release() {
     TRI_ASSERT(_isUsed);
     _isUsed = false;
+    if (!_canUseExpire) {
+      _expires = TRI_microtime() + _ttl;
+      _canUseExpire = true;
+    }
   }
 
   virtual void kill() {}
@@ -137,6 +144,10 @@ class Cursor {
   double _ttl;
   double _expires;
   bool const _hasCount;
+  /// @brief this flag is initially false, but will flip to true once the cursor
+  /// is returned to the cursor repository. if the flag is still false, a cursor
+  /// cannot expire (e.g. because it is still operating)
+  bool _canUseExpire;
   bool _isDeleted;
   bool _isUsed;
 };
